--- a/pipelines.yaml
+++ b/pipelines.yaml
@@ -20,6 +20,12 @@ stages:
       pool:
         vmImage: 'ubuntu-latest'
       steps:
+      # Force restore on pacakges
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'restore'
+          projects: '**/*.csproj'
+          feedsToUse: 'config'
       # Publish the function project
       - task: DotNetCoreCLI@2
         displayName: 'dotnet publish'
