--- a/pipelines.yaml
+++ b/pipelines.yaml
@@ -49,12 +49,12 @@ stages:
       rg: blog
       deploy-storage-name: vplblogdeploy
       deploy-container-name: artefacts
-      folder:  $(System.TeamProject)/$(System.StageName)/$(System.StageAttempt)/$(System.JobName)
-      deployment-uid:  $(System.TeamProject)-$(System.StageName)-$(System.StageAttempt)-$(System.JobName)
     jobs:
     - job:  main
       dependsOn:  []
-      variables: []
+      variables:
+        folder:  $(System.TeamProject)/$(System.StageName)/$(System.StageAttempt)/$(System.JobName)
+        deployment-uid:  $(System.TeamProject)-$(System.StageName)-$(System.StageAttempt)-$(System.JobName)
       pool:
         vmImage: ubuntu-latest
       steps:
